# LUCID

./: .gitignore  README.md  RESPONSIBLE_USE.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml.disabled
benchmarks/datasets/v1/: README.md  schema.json
benchmarks/manifests/: detector_robustness_v1.yaml  transform_ablation_v1.yaml
benchmarks/results/: 20260221-4cb4640.json  20260221-832635e.json  20260226-6768060.json
config/: default.toml
config/examples/: business.toml  general.toml  humanities.toml  stem.toml
config/profiles/: balanced.toml  fast.toml  quality.toml
docs/: 03-term-protection-specification.md  PHASE3_RESEARCH_SPECIFICATION.md  development-roadmap.md  index.md  system-design.md  system-overview.md
docs/api/: config.md  models.md  output.md  pipeline.md
docs/benchmarks/: README.md  detection.md  humanization.md  latency.md  semantic.md
examples/: detect_latex.py  full_pipeline.py  humanize_markdown.py
scripts/: bench_report.py
src/lucid/: __init__.py  checkpoint.py  cli.py  config.py  output.py  pipeline.py  progress.py  web.py
src/lucid/bench/: __init__.py  aggregation.py  datasets.py  experiment.py  manifests.py  reporting.py  runner.py  slices.py
src/lucid/core/: __init__.py  errors.py  protocols.py  registry.py  types.py
src/lucid/detector/: __init__.py  base.py  binoculars.py  calibrate.py  ensemble.py  explain.py  features.py  registry.py  roberta.py  runner.py  statistical.py
src/lucid/evaluator/: __init__.py  bertscore.py  embedding.py  nli.py  pipeline.py  term_verify.py
src/lucid/humanizer/: __init__.py  adversarial.py  ollama.py  prompts.py  strategies.py  term_protect.py
src/lucid/metrics/: __init__.py  base.py  bertscore.py  drift.py  embedding.py  nli.py  readability.py  structure.py  term_verify.py
src/lucid/models/: __init__.py  download.py  manager.py  results.py
src/lucid/parser/: __init__.py  base.py  chunk.py  latex.py  markdown.py  merge.py  plaintext.py
src/lucid/reconstructor/: __init__.py  latex.py  markdown.py  validator.py
src/lucid/transform/: __init__.py  adversarial.py  chunk_policy.py  ollama.py  operators.py  prompts.py  search.py  similarity.py  term_protect.py
tests/: conftest.py  test_checkpoint.py  test_cli_integration.py  test_config.py  test_output.py  test_pipeline.py  test_web.py
tests/benchmarks/: __init__.py  bench_detection.py  bench_evaluation.py  bench_humanization.py  bench_pipeline.py  bench_transform.py  conftest.py
tests/corpus/latex/: complex.tex  math_display.tex  math_inline.tex  sections.tex  simple.tex
tests/corpus/markdown/: code_blocks.md  complex.md  lists.md  math.md  simple.md
tests/corpus/plaintext/: mixed.txt  paragraphs.txt  short.txt
tests/test_bench/: test_aggregation.py  test_datasets.py  test_experiment.py  test_manifests.py  test_reporting.py  test_slices.py
tests/test_core/: test_errors.py  test_registry.py  test_types.py
tests/test_detector/: __init__.py  test_base.py  test_binoculars.py  test_calibration.py  test_ensemble.py  test_explain.py  test_feature_bounds.py  test_feature_extractors.py  test_feature_tiers.py  test_roberta.py  test_runner.py  test_statistical.py
tests/test_evaluator/: test_bertscore.py  test_embedding.py  test_evaluator_init.py  test_nli.py  test_pipeline.py  test_term_verify.py
tests/test_humanizer/: test_adversarial.py  test_humanizer_init.py  test_ollama.py  test_prompts.py  test_strategies.py  test_term_protect.py
tests/test_integration/: __init__.py  test_e2e.py
tests/test_metrics/: test_bertscore.py  test_drift.py  test_embedding.py  test_nli.py  test_readability.py  test_runner.py  test_structure.py  test_term_verify.py
tests/test_models/: test_download.py  test_manager.py  test_results.py
tests/test_parser/: test_chunk.py  test_init.py  test_latex.py  test_markdown.py  test_merge.py  test_plaintext.py
tests/test_reconstructor/: __init__.py  test_latex_recon.py  test_markdown_recon.py  test_validator.py
tests/test_transform/: test_adversarial.py  test_chunk_policy.py  test_humanizer_init.py  test_ollama.py  test_operators.py  test_prompts.py  test_search.py  test_similarity.py  test_strategies.py  test_term_protect.py  test_transform_init.py
