[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid-ai"
version = "0.1.0"
description = "Offline-first AI content detection and humanization engine for LaTeX/Markdown documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{ name = "Tom" }]
keywords = ["ai-detection", "humanization", "latex", "markdown", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pylatexenc>=2.10",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "transformers>=4.44.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "spacy>=3.7.0",
    "xgboost>=2.0.0",
    "sentence-transformers>=3.0.0",
    "bert-score>=0.3.13",
    "torch>=2.4.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.23.0",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
detection-full = [
    "optimum[onnxruntime]>=1.19.0",
]
web = ["gradio>=4.0.0"]
docs = ["mkdocs>=1.6.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.27.0"]
bench = ["pytest-benchmark>=4.0.0"]

[project.scripts]
lucid = "lucid.cli:main"
lucid-web = "lucid.web:main"

[project.urls]
Homepage = "https://github.com/AetherForge/lucid"
Repository = "https://github.com/AetherForge/lucid"
Documentation = "https://github.com/AetherForge/lucid/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/lucid"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["lucid"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
asyncio_mode = "auto"
addopts = [
    "--cov=lucid",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
    "--strict-markers",
    "-m not integration",
    "-v",
]
markers = [
    "integration: marks tests requiring model downloads or external services",
    "slow: marks tests that take >5s",
    "benchmark: marks benchmark tests",
]

[tool.coverage.run]
source = ["src/lucid"]
omit = [
    "src/lucid/cli.py",
    "src/lucid/reconstructor/*",
    "src/lucid/web.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
